@@ -19,7 +19,7 @@
 
 #include "OnStoredInstanceCallback.h"
 
-#include "PythonObject.h"
+#include "PythonString.h"
 #include "Autogenerated/sdk.h"
 
 #include "../Resources/Orthanc/Plugins/OrthancPluginCppWrapper.h"
@@ -48,9 +48,11 @@ static OrthancPluginErrorCode OnStoredInstanceCallback(const OrthancPluginDicomI
     /**
      * Construct the arguments tuple (output, uri)
      **/
+    PythonString str(lock, instanceId);
+    
     PythonObject args2(lock, PyTuple_New(2));
     PyTuple_SetItem(args2.GetPyObject(), 0, pInst);
-    PyTuple_SetItem(args2.GetPyObject(), 1, PyUnicode_FromString(instanceId));
+    PyTuple_SetItem(args2.GetPyObject(), 1, str.Release());
 
     PythonObject result(lock, PyObject_CallObject(storedInstanceCallback_, args2.GetPyObject()));
 
